--- a/src/components/base/Button/Button.scss
+++ b/src/components/base/Button/Button.scss
@@ -124,6 +124,8 @@
     border-radius: radius('xs');
     border: spacing(0.6) solid color('gray');
     padding: spacing(5) spacing(4);
+    padding-top: calc(#{spacing(5)} + 0.1875rem);
+    padding-bottom: calc(#{spacing(5)} - 0.1875rem);
     color: color('dusty-gray');
   }
 
